--- a/css/contacto.css
+++ b/css/contacto.css
@@ -4,7 +4,7 @@
   width: 100%;
   height: 400px;
   margin-top: 80px;
-  background-image: url(/img/portada.webp);
+  background-image: url(../img/portada.webp);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -120,7 +120,7 @@ section{
       height: 300px;
       margin-top: 80px;
       position: relative;
-      background-image: url(/img/portadaCelular.png);
+      background-image: url(../img/portadaCelular.png);
       background-position: center;
       background-size: cover;
       background-repeat: no-repeat;    
