--- a/css/servicios.css
+++ b/css/servicios.css
@@ -4,7 +4,7 @@
     width: 100%;
     height: 400px;
     margin-top: 80px;
-    background-image: url(/img/portada.webp);
+    background-image: url(../img/portada.webp);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
