--- a/css/index.css
+++ b/css/index.css
@@ -259,7 +259,7 @@ aside{
         height: 300px;
         margin-top: 80px;
         position: relative;
-        background-image: url(../img/portadaCelular.png);
+        background-color: black;
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;    
