--- a/css/servicios.css
+++ b/css/servicios.css
@@ -150,7 +150,7 @@ margin-bottom: 4px;
         height: 300px;
         margin-top: 80px;
         position: relative;
-        background-image: url(../img/portadaCelular.png);
+        background-color: #000000;
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;    
